# AnnNet

./: .bumpversion.cfg  .coverage  .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  rename.py  sitemap.xml
.github/actions/setup/: action.yml
.github/workflows/: ci-testing-unit.yml  sphinx_autodoc.yaml
.ipynb_checkpoints/: pynb_test-checkpoint.ipynb
API_demo_notebook/: index.html
about/: index.html
annnet/: __init__.py
annnet-project/design-philosophy/: index.html
annnet-project/project/: index.html
annnet-project/use-cases/: index.html
annnet/adapters/: GraphDir_Parquet_adapter.py  SIF_adapter.py  __init__.py  _base.py  _utils.py  dataframe_adapter.py  graphtool_adapter.py  igraph_adapter.py  json_adapter.py  manager.py  networkx_adapter.py  sbml_adapter.py
annnet/core/: graph.py
annnet/io/: csv.py  excel.py  io_annnet.py
annnet/utils/: typing.py  validation.py
annnet_showcase/: index.html
community/: index.html
community/contribute/: index.html
community/contribute-codebase/: index.html
community/contribute-docs/: index.html
docs/: API_demo_notebook.ipynb  about.md  annnet_showcase.ipynb  graph_history.parquet  graph_input.xlsx  incidencegraph_stress_notebook.ipynb  index.md  io_annnet.md  ppi_example.ipynb  sbml_io.ipynb  stress_notebook.ipynb  testing_new_updates.ipynb
docs/.ipynb_checkpoints/: API_demo_notebook-checkpoint.ipynb  incidencegraph_stress_notebook-checkpoint.ipynb  ppi_example-checkpoint.ipynb
docs/api/: graphglue.adapters.rst  graphglue.rst
docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/reference/: api.md
docs/reference/source/graphglue/: _metadata-docs.md
docs/source/: conf.py  getting_started.rst  graphglue.algorithms.rst  index.rst  modules.rst
docs/src/: conf.py  index.rst
graphglue/: __init__.py  _metadata.py  test_notebook.ipynb
graphglue/.ipynb_checkpoints/: incidencegraph_stress_notebook-checkpoint.ipynb  ppi_example-checkpoint.ipynb  test_notebook-checkpoint.ipynb
graphglue/adapters/: CX2_adapter.py  GraphDir_Parquet_adapter.py  GraphML_adapter.py  SIF_adapter.py  __init__.py  _base.py  _proxy.py  _utils.py  corneto.py  dataframe_adapter.py  igraph.py  igraph_adapter.py  json_adapter.py  manager.py  networkx.py  networkx_adapter.py  sbml_adapter.py
graphglue/algorithms/: __init__.py
graphglue/core/: __init__.py  _base.py  _graph.py  _polarsgraph.py  _state.py  adapter.py  graph.py  incgraph.py  layered_incidence_graph_pl.py  metadata.py  structure.py
graphglue/core/.ipynb_checkpoints/: adapter-checkpoint.py  incgraph-checkpoint.py  incidencegraph_stress_notebook-checkpoint.ipynb  layered_incidence_graph_pl-checkpoint.py  ppi_example-checkpoint.ipynb
graphglue/demo/: demo.py
graphglue/io/: __init__.py  csv.py  excel.py  io_annnet.py  registry.py
graphglue/io/.ipynb_checkpoints/: csv-checkpoint.py
graphglue/utils/: plotting.py  typing.py  validation.py
incidencegraph_stress_notebook/: index.html
installation/: index.html
io_annnet/: index.html
learn/explanation/: index.html
learn/guides/: index.html
learn/tutorials/quickstart/: index.html
learn/tutorials/tutorial0001_basics/: index.html
ppi_example/: index.html
reference/api/: index.html
reference/source/annnet/_metadata-docs/: index.html
sbml_io/: index.html
search/: search_index.json
site/: 404.html  API_demo_notebook.ipynb  index.html  objects.inv  sitemap.xml
site/API_demo_notebook/: index.html
site/about/: index.html
site/api/: graphglue.core.rst  graphglue.io.rst
site/community/: index.html
site/community/contribute/: index.html
site/community/contribute-codebase/: index.html
site/community/contribute-docs/: index.html
site/graphglue-project/design-philosophy/: index.html
site/graphglue-project/project/: index.html
site/graphglue-project/use-cases/: index.html
site/incidencegraph_stress_notebook/: index.html
site/installation/: index.html
site/io_annnet/: index.html
site/learn/explanation/: index.html
site/learn/guides/: index.html
site/learn/tutorials/quickstart/: index.html
site/learn/tutorials/tutorial0001_basics/: index.html
site/ppi_example/: index.html
site/reference/api/: index.html
site/reference/source/graphglue/_metadata-docs/: index.html
site/sbml_io/: index.html
site/search/: search_index.json
site/source/: graphglue.demo.rst
site/source/conf/: index.html
source/conf/: index.html
src/graphglue/adapters/: _proxy.py  manager.py  networkx.py  networkxunittest.py  test_nx.py
src/graphglue/algorithms/: traversal.py
src/graphglue/core/: _incidence.py  _polarsgraph.py  layered_incidence_graph.py  test.ipynb
src/graphglue/core/.ipynb_checkpoints/: test-checkpoint.ipynb
src/graphglue/utils/: plotting.py  typing.py  validation.py
testing_new_updates/: index.html
tests/: conftest.py  helpers.py  test_cross_adapter.py  test_csv.py  test_dataframe_adapter.py  test_edge_cases.py  test_excel.py  test_graph.py  test_graphdir_adapter.py  test_graphml_adapter.py  test_igraph.py  test_integration.py  test_io_annnet.py  test_json_adapter.py  test_lazy_proxies.py  test_networkx.py  test_nx_adapter.py  test_performance.py  test_plotting.py  test_sbml_adapter.py  test_sif_adapter.py  test_twentythree.py
